agregue mas animaciones

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
         </div>
     </main>
 
+    <a href=""><button class="contacto">Contactanos</button></a>
+
     <footer class="footer">
         <div class="redes">
             <ul >
