--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <!-- ANIMATE CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
+</head>
     <body>
     <header>
         <div class="navbar-grande">
@@ -46,7 +46,7 @@
         </nav>
     </div>
 
-+
+
         <div class="carousel">
             <ul>
                 <li>
@@ -144,7 +144,7 @@
         </div>
     </main>
 
-    <a href=""><button class="contacto">Contactanos</button></a>
+    <a href=""><button class="bt-form">Contactanos</button></a>
 
     <footer class="footer">
         <div class="redes">
