--- a/html/shelter.html
+++ b/html/shelter.html
@@ -114,6 +114,8 @@
             </div>
         </div> 
 
+        <a href=""><button class="bt-form">Contactanos</button></a>
+
     </main>
 
     <footer class="footer">
