--- a/html/verinarias.html
+++ b/html/verinarias.html
@@ -101,6 +101,8 @@
             </section>
         </div>
 
+        <a href=""><button class="bt-form">Contactanos</button></a>
+
     </main>
 
     <footer class="footer">
