--- a/html/verinarias.html
+++ b/html/verinarias.html
@@ -16,7 +16,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <!-- ANIMATE CSS  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>    
-    </head>
+<!-- SEO  -->
+    <meta name="keyword" content="petshop, venta, mascotas, productos, calidad">
+    <meta name="description" content="Petshop de venta de productos de mascotas de alta calidad y precio">    
+</head>
 <body>
     <header>
         <div class="navbar-grande">
