--- a/html/contacto.html
+++ b/html/contacto.html
@@ -106,7 +106,8 @@
                 <label for="">Escriba su consulta</label>
             </div>
 
-            <button type="submit" class="bt-form">Contactar</button>
+            <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+
         </div>
     </form>
 
