--- a/html/productos.html
+++ b/html/productos.html
@@ -107,7 +107,8 @@
         
         </div>
 
-        <a href=""><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+
     </main>
 
     <footer class="footer">
