--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -108,7 +108,7 @@
             <b>Nuestro Lema: "Tu mascota merece lo mejor. ¡Ven a "Patitas Pet Shop" y descubre por qué!"</b>
             </p> 
         </div>
-        <a href=""><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
 
     </main>
 
