--- a/html/shelter.html
+++ b/html/shelter.html
@@ -55,7 +55,7 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/html/products.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/html/products.html">Productos</a>
@@ -117,7 +117,7 @@
             </div>
         </div> 
 
-        <a href=""><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
 
     </main>
 
