--- a/html/verinarias.html
+++ b/html/verinarias.html
@@ -104,7 +104,7 @@
             </section>
         </div>
 
-        <a href=""><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
 
     </main>
 
