--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             
             <ul>
                 <li>
-                    <a href="../html/products.html" ><button class="fill radius">Productos</button></a>
+                    <a href="./html/productos.html" ><button class="fill radius">Productos</button></a>
                 </li>
-                <li><a href="../html/about-us.html" ><button class="fill radius">Nosotros</button></a></li>
+                <li><a href="./html/about-us.html" ><button class="fill radius">Nosotros</button></a></li>
                 <li>
-                    <a href="../html/shelter.html" ><button class="fill radius">Refugios</button></a>
+                    <a href="./html/shelter.html" ><button class="fill radius">Refugios</button></a>
                 </li>
                 <li>
-                    <a href="../html/veterinary.html" ><button class="fill radius">Veterinarias</button></a>
+                    <a href="./html/veterinary.html" ><button class="fill radius">Veterinarias</button></a>
                 </li>
             </ul>
         </nav>
