--- a/html/productos.html
+++ b/html/productos.html
@@ -28,16 +28,16 @@
             
             <ul>    
                 <li>
-                    <a href="../index.html" ></a><button class="fill radius">Inicio</button></a>
+                    <a href="index.html" ></a><button class="fill radius">Inicio</button></a>
                 </li>
                 <li>
-                    <a href="AboutUs.html"><button class="fill radius">Nosotros</button></a>
+                    <a href="aboutus.html"><button class="fill radius">Nosotros</button></a>
                 </li>
                 <li>
-                    <a href="Shelter.html"><button class="fill radius">Refugios</button></a>
+                    <a href="shelter.html"><button class="fill radius">Refugios</button></a>
                 </li>
                 <li>
-                    <a href="Veterinary.html"><button class="fill radius">Veterinarias</button></a>
+                    <a href="verinarias.html"><button class="fill radius">Veterinarias</button></a>
                 </li>
             </ul>
         </nav>
@@ -55,16 +55,16 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/html/about-us.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="html/aboutus.html">Nosotros</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/html/shelter.html">Refugios</a>
+                        <a class="nav-link active" aria-current="page" href="html/shelter.html">Refugios</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/html/veterinary.html">Veterinarias</a>
+                      <a class="nav-link" href="html/verinarias.html">Veterinarias</a>
                     </li>
                   </ul>
                 
