--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             
             <ul>
                 <li>
-                    <a href="./html/productos.html" ><button class="fill radius">Productos</button></a>
+                    <a href="html/productos.html" ><button class="fill radius">Productos</button></a>
                 </li>
-                <li><a href="./html/about-us.html" ><button class="fill radius">Nosotros</button></a></li>
+                <li><a href="html/aboutus.html" ><button class="fill radius">Nosotros</button></a></li>
                 <li>
-                    <a href="./html/shelter.html" ><button class="fill radius">Refugios</button></a>
+                    <a href="html/shelter.html" ><button class="fill radius">Refugios</button></a>
                 </li>
                 <li>
-                    <a href="./html/veterinary.html" ><button class="fill radius">Veterinarias</button></a>
+                    <a href="html/verinarias.html" ><button class="fill radius">Veterinarias</button></a>
                 </li>
             </ul>
         </nav>
@@ -82,16 +82,16 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/html/products.html">Productos</a>
+                  <a class="nav-link active" aria-current="page" href="/html/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/html/about-us.html">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="/html/aboutus.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/html/shelter.html">Refugios</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/veterinary.html">Veterinarias</a>
+                  <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
                 </li>
               </ul>
             
