navegacion dos puntos barra

--- a/html/verinarias.html
+++ b/html/verinarias.html
@@ -28,7 +28,7 @@
            
             <ul>    
                 <li>
-                    <a href="/index.html" ><button class="fill radius">Inicio</button></a>
+                    <a href="../index.html" ><button class="fill radius">Inicio</button></a>
                 </li>
                 <li>
                     <a href="aboutus.html" ><button class="fill radius">Nosotros</button></a>
