--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -44,7 +44,7 @@
         </div>
         <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
             <div id="container-fluid" class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><h1 class="titulo">PATITAS</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="titulo">PATITAS</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -63,7 +63,7 @@
                         <a class="nav-link active" aria-current="page" href="html/shelter.html">Refugios</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
+                      <a class="nav-link" href="html/verinarias.html">Veterinarias</a>
                     </li>
                   </ul>
                 
