--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     
     <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
         <div id="container-fluid" class="container-fluid">
-          <a class="navbar-brand" href="/index.html"><h1 class="titulo">PATITAS</h1></a>
+          <a class="navbar-brand" href="index.html"><h1 class="titulo">PATITAS</h1></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -82,16 +82,16 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/html/productos.html">Productos</a>
+                  <a class="nav-link active" aria-current="page" href="html/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/html/aboutus.html">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="html/aboutus.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/html/shelter.html">Refugios</a>
+                    <a class="nav-link active" aria-current="page" href="html/shelter.html">Refugios</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
+                  <a class="nav-link" href="verinarias.html">Veterinarias</a>
                 </li>
               </ul>
             
