--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -28,7 +28,7 @@
          
             <ul>    
                 <li>
-                    <a href="index.html"><button class="fill radius">Inicio</button></a>
+                    <a href="/index.html"><button class="fill radius">Inicio</button></a>
                 </li>
                 <li>
                     <a href="productos.html" ><button class="fill radius">Productos</button></a>
