--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -57,13 +57,13 @@
                       <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                        <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="shelter.html">Refugios</a>
+                        <a class="nav-link active" aria-current="page" href="./shelter.html">Refugios</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="verinarias.html">Veterinarias</a>
+                      <a class="nav-link" href="./verinarias.html">Veterinarias</a>
                     </li>
                   </ul>
                 
