--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                   <a class="nav-link active" aria-current="page" href="/html/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="html/aboutus.html">Nosotros</a>
+                    <a class="nav-link active" aria-current="page" href="/html/aboutus.html">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="html/shelter.html">Refugios</a>
+                    <a class="nav-link active" aria-current="page" href="/html/shelter.html">Refugios</a>
                   </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
