--- a/html/productos.html
+++ b/html/productos.html
@@ -55,16 +55,16 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="html/aboutus.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="/html/aboutus.html">Nosotros</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="html/shelter.html">Refugios</a>
+                        <a class="nav-link active" aria-current="page" href="/html/shelter.html">Refugios</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="html/verinarias.html">Veterinarias</a>
+                      <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
                     </li>
                   </ul>
                 
