productos resp. navegacion

--- a/html/productos.html
+++ b/html/productos.html
@@ -28,7 +28,7 @@
             
             <ul>    
                 <li>
-                    <a href="index.html" ></a><button class="fill radius">Inicio</button></a>
+                    <a href="/index.html" ></a><button class="fill radius">Inicio</button></a>
                 </li>
                 <li>
                     <a href="aboutus.html"><button class="fill radius">Nosotros</button></a>
@@ -58,13 +58,13 @@
                       <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/html/aboutus.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="aboutus.html">Nosotros</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/html/shelter.html">Refugios</a>
+                        <a class="nav-link active" aria-current="page" href="shelter.html">Refugios</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
+                      <a class="nav-link" href="verinarias.html">Veterinarias</a>
                     </li>
                   </ul>
                 
