--- a/html/productos.html
+++ b/html/productos.html
@@ -58,7 +58,7 @@
                       <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="aboutus.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="./aboutus.html">Nosotros</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="shelter.html">Refugios</a>
