--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <a class="nav-link active" aria-current="page" href="html/shelter.html">Refugios</a>
                   </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/html/verinarias.html">Veterinarias</a>
+                  <a class="nav-link" href="html/verinarias.html">Veterinarias</a>
                 </li>
               </ul>
             
