--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -28,7 +28,7 @@
          
             <ul>    
                 <li>
-                    <a href="/index.html"><button class="fill radius">Inicio</button></a>
+                    <a href="../index.html"><button class="fill radius">Inicio</button></a>
                 </li>
                 <li>
                     <a href="productos.html" ><button class="fill radius">Productos</button></a>
@@ -54,7 +54,7 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
