--- a/html/shelter.html
+++ b/html/shelter.html
@@ -28,7 +28,7 @@
             
             <ul>    
                 <li>
-                    <a href="index.html"><button class="fill radius">Inicio</button></a>
+                    <a href="../index.html"><button class="fill radius">Inicio</button></a>
                 </li>
                 <li>
                     <a href="aboutus.html"><button class="fill radius">Nosotros</button></a>
@@ -55,16 +55,16 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="html/shelter.html">Productos</a>
+                        <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="html/aboutus.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="./aboutus.html">Nosotros</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="html/verinarias.html">Veterinarias</a>
+                      <a class="nav-link" href="./verinarias.html">Veterinarias</a>
                     </li>
                   </ul>
                 
