--- a/html/verinarias.html
+++ b/html/verinarias.html
@@ -56,16 +56,16 @@
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="html/productos.html">Productos</a>
+                        <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="html/aboutus.html">Nosotros</a>
+                        <a class="nav-link active" aria-current="page" href="./aboutus.html">Nosotros</a>
                       </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="html/shelter.html">Refugios</a>
+                      <a class="nav-link" href="./shelter.html">Refugios</a>
                     </li>
                   </ul>
                 
