--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
     </main>
 
-    <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+    <a href="html/contacto.html"><button class="bt-form">Contactanos</button></a>
 
     <footer class="footer">
         <div class="redes">
