--- a/html/productos.html
+++ b/html/productos.html
@@ -12,6 +12,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+<!-- Enlace de Font Awesome para los iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <!-- Bootstrap Bill Turner--> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <!-- ANIMATE CSS  -->
@@ -45,7 +47,7 @@
 
         <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
             <div id="container-fluid" class="container-fluid">
-              <a class="navbar-brand" href="/index.html"><h1 class="titulo">PATITAS</h1></a>
+              <a class="navbar-brand" href="/index.html"><h1 class="titulo">PRODUCTOS</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -107,29 +109,29 @@
 
             <!-- nueva seccion  -->
             <div class=" productos">
-                <img  src="https://m.media-amazon.com/images/I/61OV3q-uWlS.jpg" alt=""> 
+                <img  src="https://cdnx.jumpseller.com/be-design/image/49229157/resize/530/580?1725654471" alt="imgproducto"> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid fugiat, culpa distinctio .</p>
             </div>
             <div class=" productos">
-                <img  src="https://m.media-amazon.com/images/I/61OV3q-uWlS.jpg" alt=""> 
+                <img  src="https://resources.claroshop.com/medios-plazavip/mkt/635c8d17619f8_d_nq_np_648769-mlm47323300484_092021-ojpg.jpg?scale=350" alt=""> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid fugiat, culpa distinctio .</p>
             </div>
         </div>
         <div class="sector3 sectores">
             <div class=" productos">
-                <img  src="https://m.media-amazon.com/images/I/61OV3q-uWlS.jpg" alt=""> 
+                <img  src="https://media.licdn.com/dms/image/v2/C5612AQFyyoSPEAC8QA/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1542198865695?e=2147483647&v=beta&t=GzsYVA8_7G0F0KEAhoG8wxJeTCbvb9JYvM81iwVC7zA" alt=""> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid fugiat, culpa distinctio .</p>
             </div>
             <div class=" productos">
-                <img  src="https://m.media-amazon.com/images/I/61OV3q-uWlS.jpg" alt=""> 
+                <img  src="https://m.media-amazon.com/images/I/71Uy8+JCU5L._AC_UF350,350_QL80_.jpg" alt=""> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid fugiat, culpa distinctio .</p>
             </div>
             <div class=" productos">
-                <img  src="https://m.media-amazon.com/images/I/61OV3q-uWlS.jpg" alt=""> 
+                <img  src="https://m.media-amazon.com/images/I/51ve4o5NWiL._AC_UF894,1000_QL80_.jpg" alt=""> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid fugiat, culpa distinctio .</p>
             </div>
             <div class=" productos">
-                <img  src="https://m.media-amazon.com/images/I/61OV3q-uWlS.jpg" alt=""> 
+                <img  src="https://m.media-amazon.com/images/I/814zM4Nm6aL._AC_UF350,350_QL80_.jpg" alt=""> 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus aliquid fugiat, culpa distinctio .</p>
             </div>
 
@@ -156,7 +158,7 @@
             </ul>
         </div>
         <div class="mapa">
-            <p> Estamos ubicados en:</p>
+            
             <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26274.461502411927!2d-58.62850561548886!3d-34.5963802841388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb85121b6d817%3A0xa67645671da66be!2sPet%20shop%20Patitas!5e0!3m2!1ses-419!2sar!4v1727401065413!5m2!1ses-419!2sar" width="" height="" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">https://maps.app.goo.gl/wMB7m6NUEyNArVRe9</iframe>
         </div>
     </footer>
