--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -12,6 +12,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+<!-- Enlace de Font Awesome para los iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <!-- Bootstrap Bill Turner--> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <!-- ANIMATE CSS  -->
@@ -44,7 +46,7 @@
         </div>
         <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
             <div id="container-fluid" class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="titulo">PATITAS</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="titulo">SOBRE NOSOTROS</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -124,7 +126,7 @@
             </ul>
         </div>
         <div class="mapa">
-            <p> Estamos ubicados en:</p>
+            
             <iframe  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26274.461502411927!2d-58.62850561548886!3d-34.5963802841388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb85121b6d817%3A0xa67645671da66be!2sPet%20shop%20Patitas!5e0!3m2!1ses-419!2sar!4v1727401065413!5m2!1ses-419!2sar" width="" height="" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">https://maps.app.goo.gl/wMB7m6NUEyNArVRe9</iframe>
         </div>
     </footer>
