--- a/html/contacto.html
+++ b/html/contacto.html
@@ -84,7 +84,7 @@
   </nav>
 
     <form action="" class="form-container">
-        <div class="form">
+        <div class="form animate__animated animate__zoomInDown">
             <h5><b>CONTACTO</b></h5>
             <div class="grupo">
                 <input type="text" name=" id" required><span class="barra"></span>
