corregi todos los errores

--- a/html/shelter.html
+++ b/html/shelter.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="navbar-grande">
-            <h1 class="titulo animate__backInRight animate__bounce">Refugios</h1>
+            <a href="../index.html"><h1 class="titulo animate__backInRight animate__bounce">Refugios</h1></a>
         <nav>
             
             <ul>    
@@ -47,7 +47,7 @@
 
         <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
             <div id="container-fluid" class="container-fluid">
-              <a class="navbar-brand" href="index.html"><h1 class="titulo">REFUGIOS</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="titulo">PATITAS</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -76,6 +76,8 @@
           </nav>
     </header>
 
+    
+
     <main>
 <!-- CARROUSEL  -->
         <div id="carouselExampleSlidesOnly" class="carousel slide faster" data-bs-ride="carousel">
@@ -91,6 +93,8 @@
               </div>
             </div>
           </div>
+
+          <h2>Refugios</h2>
 <!-- TARJETAS -->
         <div class="flex-container">
             <div class="card" style="width: 18rem;">
