--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="navbar-grande">
-            <h1 class="titulo animate__backInRight animate__bounce">Sobre Nosotros</h1>
+            <a href="../index.html"><h1 class="titulo animate__backInRight animate__bounce">PATITAS</h1></a>
         <nav>
          
             <ul>    
@@ -46,7 +46,7 @@
         </div>
         <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
             <div id="container-fluid" class="container-fluid">
-              <a class="navbar-brand" href="../index.html"><h1 class="titulo">SOBRE NOSOTROS</h1></a>
+              <a class="navbar-brand" href="../index.html"><h1 class="titulo">PATITAS</h1></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -77,6 +77,7 @@
     </header>
 
     <main>
+        <h2>Sobre Nosotros</h2>
         <h2><b>Bienvenidos a "Patitas Pet Shop"</b></h2>
         <div id="grid-nosotros">
             <div class="picture">
