listo para entregar

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -83,8 +83,8 @@
     </div>
   </nav>
 
-    <form action="" class="form-container">
-        <div class="form animate__animated animate__zoomInDown">
+    <form action="" class="form-container" >
+        <div class="form animate__animated animate__zoomInDown" style="animation-duration: 2s;">
             <h5><b>CONTACTO</b></h5>
             <div class="grupo">
                 <input type="text" name=" id" required><span class="barra"></span>
