--- a/html/shelter.html
+++ b/html/shelter.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="navbar-grande">
-            <a href="../index.html"><h1 class="titulo animate__backInRight animate__bounce">Refugios</h1></a>
+            <a href="../index.html"><h1 class="titulo animate__backInRight animate__bounce">PATITAS</h1></a>
         <nav>
             
             <ul>    
