--- a/html/contacto.html
+++ b/html/contacto.html
@@ -55,7 +55,7 @@
     
 <nav id="navbar" class="navbar navbar-dark bg-dark fixed-top">
     <div id="container-fluid" class="container-fluid">
-      <a class="navbar-brand" href="/index.html"><h1 class="titulo">PATITAS</h1></a>
+      <a class="navbar-brand" href="../index.html"><h1 class="titulo">PATITAS</h1></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
