--- a/html/contacto.html
+++ b/html/contacto.html
@@ -106,7 +106,7 @@
                 <label for="">Escriba su consulta</label>
             </div>
 
-            <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+            <a href="../html/contacto.html" style="text-decoration: none;"><button class="bt-form">Contactanos</button></a>
 
         </div>
     </form>
