--- a/html/verinarias.html
+++ b/html/verinarias.html
@@ -134,7 +134,7 @@
             </section>
         </div>
 
-        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html" style="text-decoration: none;"><button class="bt-form">Contactanos</button></a>
 
     </main>
 
