--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -112,7 +112,7 @@
             <b>Nuestro Lema: "Tu mascota merece lo mejor. ¡Ven a "Patitas Pet Shop" y descubre por qué!"</b>
             </p> 
         </div>
-        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html" style="text-decoration: none;"><button class="bt-form">Contactanos</button></a>
 
     </main>
 
