--- a/html/productos.html
+++ b/html/productos.html
@@ -150,7 +150,7 @@
         
         </div>
 
-        <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+        <a href="../html/contacto.html" style="text-decoration: none;"><button class="bt-form">Contactanos</button></a>
 
     </main>
 
