--- a/html/shelter.html
+++ b/html/shelter.html
@@ -125,7 +125,7 @@
 
     </main>
 
-    <a href="../html/contacto.html"><button class="bt-form">Contactanos</button></a>
+    <a href="../html/contacto.html" style="text-decoration: none;"><button class="bt-form">Contactanos</button></a>
 
     <footer class="footer">
         <div class="redes">
