--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </div>
     </main>
 
-    <a href="html/contacto.html"><button class="bt-form">Contactanos</button></a>
+    <a href="html/contacto.html" style="text-decoration: none;"><button class="bt-form">Contactanos</button></a>
 
     <footer class="footer">
         <div class="redes">
